# tree-sitter-pyrope

./: .gitattributes  .gitignore  AGENTS.md  CMakeLists.txt  Cargo.toml  LICENSE  MODULE.bazel  Makefile  Package.swift  README.md  bench.sh  binding.gyp  extract.rb  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-pyrope.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/rust/: lib.rs
editors/nvim/: pyrope.lua
full_pyrope/: file1.prp  file10.prp  file11.prp  file12.prp  file13.prp  file14.prp  file15.prp  file16.prp  file17.prp  file18.prp  file19.prp  file2.prp  file20.prp  file21.prp  file22.prp  file23.prp  file24.prp  file25.prp  file26.prp  file27.prp  file28.prp  file29.prp  file3.prp  file30.prp  file31.prp  file32.prp  file33.prp  file34.prp  file35.prp  file36.prp  file37.prp  file38.prp  file39.prp  file4.prp  file40.prp  file41.prp  file42.prp  file43.prp  file44.prp  file45.prp  (+44 more)
old_pyrope_snippets/: cachetag.prp  callargs.prp  docs.prp  freelist.prp  import_pub.prp  lambda1.prp  legal_expr.prp  nominal_type.prp  pipe2.prp  rambda.prp  randomize.prp  scope_pipe.prp  struct_self.prp  type_length.prp  valids.prp
prpfmt/: Makefile  README.md  gen_symbols.sh  ir.c  ir.cc  ir.h  main.c  main.cc  old_prpfmt.c  prpfmt.c  prpfmt.cc  prpfmt.h  prpfmt_api.h
prpfmt/tests/: README.md  check_order.py  fp_check_content.py  generate_eval.py  interactive_prpfmt_test.py  prpfmt_debug.py  remove_indent.py  run_benchmarks.py  run_tests.py  verify_all.py
prpparse/: BUILD  README.md  ast.hpp  diag.hpp  lexer.cpp  lexer.hpp  node_kind.hpp  parser.cpp  parser.hpp  plan.md  prp_fields.def  prp_keywords.def  prp_nodes.def  prp_tokens.def  prp_tree.cpp  prp_tree.hpp  prpparse.hpp  source_buffer.hpp  todo.md  token.hpp
prpparse/tests/: cli.cpp  diff_oracle.sh  fuzz.py  lexer_test.cpp  parser_test.cpp  smoke_test.cpp
queries/: folds.scm  highlights.scm  indents.scm
scripts/: test.sh  test_prpparse.sh
snippets/: accumulate.prp  assigns.prp  cachetag.prp  callargs.prp  delegate.prp  docs.prp  freelist.prp  ftq.prp  functions.prp  gcd.prp  import_pub.prp  lambda1.prp  legal_expr.prp  match.prp  nominal_type.prp  onehot.prp  overload_same_struct.prp  pipe2.prp  pixmap.prp  rambda.prp  randomize.prp  reduce.prp  scope_pipe.prp  struct_self.prp  tommy_cpu.prp  tommy_cpu2.prp  type1.prp  type_length.prp  valids.prp
src/: grammar.json  node-types.json  parser.c  scanner.c
tools/: BUILD  copt_default.bzl
(+6 files in other folders)
