[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-pyrope"
description = "Pyrope grammar for tree-sitter"
version = "0.9.2"
keywords = ["incremental", "parsing", "tree-sitter", "pyrope"]
classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
authors = [{ name = "Jose Renau" }]
requires-python = ">=3.10"
license.text = "BSD-3-Clause"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/masc-ucsc/tree-sitter-pyrope"

[project.optional-dependencies]
core = ["tree-sitter~=0.24"]

[tool.cibuildwheel]
build = "cp310-*"
build-frontend = "build"
